@startuml

javafx.Application <|-- InventoryProgram
InventoryProgram <-- InventoryManagerController
InventoryManagerController <-- FileManager

InventoryManagerController <-- InventoryItem
InventoryManagerController <-- InventorySearch

class InventoryProgram
{
    + Main()
    + Start()
}


class InventoryManagerController
{
    + ObservableList<InventoryItem> TableList
    + FileChooser fileChooser

    @fxml
    - BorderPane MainScene
    - TextField ErrorMessage
    - TextField AddValue
    - TextField AddSerialNumber
    - TextField AddName
    - TextField SearchTerm
    - TableView<InventoryItem> InventoryTable
    - TableColumn<InventoryItem, String> Value
    - TableColumn<InventoryItem, String> SerialNumber
    - TableColumn<InventoryItem, String> Name

    + Initialize()

    + SearchBar()
    + SaveClicked()
    + LoadClicked()
    + AddClicked()
    + DeleteClicked()
    + ClearListClicked()

    + addItem(String, String, String)
    + addItemToTable(String, String, String)
    + DeleteItem(InventoryItem)

    - validateValue(String)
    - validateName(String)
    - validateSerialNumber(String)
}


class InventorySearch
{
    - ObservableList<InventoryItem>: TableList, ResultList

    + InventorySearch(ObservableList<InventoryItem>)
    + SearchList(String)
}


class InventoryItem
{
    - String: Name
    - String: SerialNumber
    - String: Value

    + InventoryItem(String, String, String)

    + getName()
    + setName(String)

    + getSerialNumber()
    + setSerialNumber(String)

    + getValue()
    + setValue(String)
}


class FileManager
{
    + SaveFile(String)
    + LoadFile(String)

    - HTMLSave()
    - HTMLLoad()

    - TSVSave()
    - TSVLoad()

    - ExtensionType(String)
}

@enduml